<resources>
    <string name="app_name">DukaanAndroidAssignment</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="products">Products</string>
    <string name="marketing">Marketing</string>
    <string name="account">Account</string>
    <string name="yourPlan">Your Plan 100% FREE</string>
    <string name="mano_super_market">Mano Super Market</string>
    <string name="share">Share</string>
    <string name="totalSales">Total Sales</string>
    <string name="rupees">\u20B92904</string>
    <string name="storeView">Store View</string>
    <string name="productView">Product View</string>
    <string name="active_order">Active Order</string>
    <string name="view_all">View All</string>
    <string name="new1">New</string>
    <string name="share_more_to_earn_more">Share more to earn more</string>
    <string name="your_customers_can_visit_your_online_store_and_place_the_orders_from_this_link">Your customers can visit your online store and place the orders from this link.</string>
    <string name="overview">Overview</string>
    <string name="last_week">Last Week</string>
    <string name="order1">Order #281217</string>
    <string name="order2">Order #281134</string>
    <string name="order3">Order #230123</string>
    <string name="today_11_11pm">Today 11:11PM</string>
    <string name="costitem2">₹399</string>
    <string name="costitem3">₹410</string>
    <string name="dateitem2">Yesterday, 12:10 PM</string>
    <string name="dateitem3">Yesterday, 09:12 PM</string>
    <string name="paid">PAID</string>


</resources>
