<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="horizontal"
    android:padding="@dimen/_3sdp"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvHomeBottomLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:drawableTop="@drawable/ic_icons_tabbar_home_active"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_8sdp" />


        <TextView
            android:id="@+id/tvOrderBottomLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:drawableTop="@drawable/ic_icons_tabbar_orders_inactive"
            android:gravity="center"
            android:text="@string/orders"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_8sdp" />

        <TextView
            android:id="@+id/tvWalletBottomLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:drawableTop="@drawable/ic_icons_tabbar_products_inactive"
            android:gravity="center"
            android:text="@string/products"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_8sdp" />

        <TextView
            android:id="@+id/tvTransBottomLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:drawableTop="@drawable/ic_icons_tabbar_categories_inactive"
            android:gravity="center"
            android:text="@string/marketing"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_8sdp" />

        <TextView
            android:id="@+id/tvMoreBottomLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:drawableTop="@drawable/ic_icons_tabbar_account_inactive"
            android:gravity="center"
            android:text="@string/account"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_8sdp" />
    </LinearLayout>
</LinearLayout>